Fix icons defined by iconCssClass not showing up

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -1343,6 +1343,10 @@ body.inboxsdk__gmailv1css .inboxsdk__resultsSection_title h3 {
   -webkit-align-items:  center;
 }
 
+.inboxsdk__resultsSection .inboxsdk__resultsSection_tableRow .WA > div {
+  width: 100%;
+}
+
 .inboxsdk__resultsSection .xX {
   width: 20ex;
 }
